--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <title>Dynamic Landing Page with Vite</title>
+    <title>Simple Landing Page with Vite</title>
   </head>
   <body>
     <div id="root"></div>
